# cm108-driver-rust

./: .gitignore  CONTEXT.md  Cargo.toml  Cross.toml
.cargo/: config.toml
crates/cm108-client/: Cargo.toml  build.rs  cbindgen.toml
crates/cm108-client/src/: client.rs  ffi.rs  framing.rs  lib.rs
crates/cm108-hal/: Cargo.toml
crates/cm108-hal/src/: device.rs  hid_gpio.rs  iso_stream.rs  lib.rs  rt.rs  usbfs.rs
crates/cm108-server/: Cargo.toml
crates/cm108-server/src/: ipc.rs  latency.rs  main.rs  server.rs  shmem.rs
crates/cm108-types/: Cargo.toml
crates/cm108-types/src/: codec.rs  lib.rs
crates/cm108-types/tests/: codec.rs
debian/: changelog  cm108d.conf  control  copyright  rules
examples/: cos_monitor.rs  loopback.rs  ptt_test.rs  record_playback.c
include/: cm108.h
systemd/: cm108d.service
udev/: 90-cm108.rules
