[workspace]
members = [
    "crates/cm108-types",
    "crates/cm108-hal",
    "crates/cm108-server",
    "crates/cm108-client",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dfrederick15/cm108-driver-rust"
rust-version = "1.75"

[workspace.dependencies]
cm108-types = { path = "crates/cm108-types" }
cm108-hal   = { path = "crates/cm108-hal" }
rusb        = "0.9"
rtrb        = "0.3"
libc        = "0.2"

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
panic         = "abort"
