[package]
name        = "cm108-client"
description = "Client library for the CM108/CM119 audio server (Rust + C FFI)"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[lib]
name    = "cm108client"
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
cm108-types = { workspace = true }
postcard    = { workspace = true }
nix         = { workspace = true }
libc        = { workspace = true }
thiserror   = { workspace = true }

[features]
generate-header = []

[build-dependencies]
cbindgen = "0.27"

[package.metadata.deb]
name     = "libcm108client"
section  = "libs"
priority = "optional"
depends  = "$auto"
assets = [
    ["target/release/libcm108client.so",   "usr/lib/libcm108client.so.0.1.0",  "644"],
    ["include/cm108.h",                    "usr/include/cm108.h",              "644"],
]
# Provide /usr/lib/libcm108client.so as the unversioned symlink for -lcm108client.
provides = "libcm108client-dev"
