[package]
name        = "cm108-server"
description = "Real-time CM108/CM119 audio server daemon"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[[bin]]
name = "cm108d"
path = "src/main.rs"

[dependencies]
cm108-types  = { workspace = true }
cm108-hal    = { workspace = true }
rusb         = { workspace = true }
libc         = { workspace = true }
nix          = { workspace = true }
postcard     = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
clap         = { workspace = true }
anyhow       = { workspace = true }
