[package]
name        = "cm108-types"
description = "Shared types for the CM108/CM119 pure-Rust audio stack"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
postcard = { workspace = true }
serde    = { version = "1", features = ["derive"] }
bitflags = { workspace = true }

[features]
default = ["std"]
std     = []
